--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.29.1",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-calendars": "^1.1287.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
